# Procesor-CSS

./: CMakeLists.txt  README.md
src/: Attributes.cpp  CMD.cpp  CMD.hpp  CSS.cpp  CSS.hpp  Config.hpp  DoubleLinkedList.cpp  Helpers.cpp  Parse.cpp  Parse.hpp  Section.cpp  Selectors.cpp  main.cpp
tests/: 13.out  15.in  16.in  17.in  core  test.sh
tests/txts/: 10.in  11.in  12.in  14.in  15.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
